# yomigana-ebook

./: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.web-demo  Dockerfile.web_demo  LICENSE  README.md  pyproject.toml
tests/: test_checking.py  test_converter.py  test_yomituki.py
web-demo/: README.md  pyproject.toml
web-demo/client/: index.html  package-lock.json  package.json
web-demo/client/src/: main.ts  style.css
web-demo/web_demo/: main.py
yomigana_ebook/: analyzer.py  checking.py  cli.py  constants.py  converter.py  process_ebook.py  yomituki.py
