[tool.poetry]
name = "yomigana-ebook"
version = "0.1.0"
description = "make learning Japanese easier by adding readings to kanji in the e-book"
authors = ["Yu Chen <rabbit19981023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

fugashi = "^1.2.1"
unidic = "^1.1.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
