[tool.poetry]
name = "yomigana-ebook"
version = "0.1.0"
description = "make learning Japanese easier by adding readings to kanji in the e-book"
authors = ["Yu Chen <rabbit19981023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

fugashi = "^1.2.1"
unidic = "^1.1.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-watcher = "^0.2.6"
pytest-testmon = "^2.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
