[tool.poetry]
name = "web-demo"
version = "0.1.0"
description = "The web demo for yomigana_ebook package"
authors = ["Yu Chen <rabbit19981023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

yomigana-ebook = {path = ".."}
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
